--- a/src/DaprExtension/DaprExtension.csproj
+++ b/src/DaprExtension/DaprExtension.csproj
@@ -19,5 +19,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.14" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.2" />
   </ItemGroup>
 </Project>
