--- a/samples/javascript-azurefunction/local.settings.json
+++ b/samples/javascript-azurefunction/local.settings.json
@@ -2,7 +2,7 @@
     "IsEncrypted": false,
     "Values": {
       "FUNCTIONS_WORKER_RUNTIME": "node",
-      "AzureWebJobsStorage": "",
+      "AzureWebJobsStorage": "UseDevelopmentStorage=true",
       "daprAddress": "http://localhost:3501"
     },
     "Host": {
