--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -3,8 +3,12 @@ name: Build and Test
 on:
   push:
     branches: [ master ]
+    paths-ignore: 
+      - '**.md'
   pull_request:
     branches: [ master ]
+    paths-ignore: 
+      - '**.md'
 
 jobs:
   build:
@@ -17,7 +21,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101
-    - name: Build solution
-      run: dotnet build --configuration Release
-    - name: Run unit tests
-      run: dotnet test --no-build --verbosity normal
+    - name: Build and run tests
+      run: |
+        dotnet build --configuration Release
+        dotnet test --no-build --verbosity normal
