--- a/samples/dotnet-azurefunction/local.settings.json
+++ b/samples/dotnet-azurefunction/local.settings.json
@@ -1,10 +1,9 @@
 {
-    "IsEncrypted": false,
-    "Values": {
-      "FUNCTIONS_WORKER_RUNTIME": "dotnet",
-      "AzureWebJobsStorage": ""
-    },
-    "Host": {
-      "LocalHttpPort": 7072
-    }
+  "IsEncrypted": false,
+  "Values": {
+    "AzureWebJobsStorage": "UseDevelopmentStorage=true",
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet",
+    "StateStoreName": "statestore", // should be same as metatdata.name in components/statestore.yaml
+    "KafkaBindingName": "sample-topic" // should be same as metatdata.name in components/kafka_binding.yaml
   }
+}
