--- a/src/DaprExtension/DaprExtension.csproj
+++ b/src/DaprExtension/DaprExtension.csproj
@@ -3,13 +3,13 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
-    <PackageId>Microsoft.Azure.WebJobs.Extensions.Dapr</PackageId>
+    <PackageId>Dapr.AzureFunctions.Extension</PackageId>
     <Description>This extension adds bindings for Dapr</Description>
     <Version>0.1.0$(VersionSuffix)</Version>
     <CommitHash Condition="$(CommitHash) == ''">N/A</CommitHash>
     <InformationalVersion>$(Version) Commit hash: $(CommitHash)</InformationalVersion>
-    <AssemblyName>Microsoft.Azure.WebJobs.Extensions.Dapr</AssemblyName>
-    <RootNamespace>Microsoft.Azure.WebJobs.Extensions.Dapr</RootNamespace>
+    <AssemblyName>Dapr.AzureFunctions.Extension</AssemblyName>
+    <RootNamespace>Dapr.AzureFunctions.Extension</RootNamespace>
     <Authors>Microsoft</Authors>
     <Company>Microsoft</Company>
     <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
