change to nuget reference for docker build

--- a/samples/dotnet-azurefunction/.dockerignore
+++ b/samples/dotnet-azurefunction/.dockerignore
@@ -1,1 +1,8 @@
 local.settings.json
+components/
+deploy/
+README.md
+.gitignore
+.dockerignore
+docker-compose-single-kafka.yml
+kafka-non-persistence.yaml
