--- a/samples/dotnet-azurefunction/dotnet-azurefunction.csproj
+++ b/samples/dotnet-azurefunction/dotnet-azurefunction.csproj
@@ -7,11 +7,17 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.10" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.3" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Dapr" Version="0.1.0" />
   </ItemGroup>
+  <!-- Switch to Project Reference by uncomment this line and remove the Package Reference line
   <ItemGroup>
     <ProjectReference Include="..\..\src\DaprExtension\DaprExtension.csproj" />
   </ItemGroup>
+  -->
   <ItemGroup>
+    <None Update="components\kafka_bindings.yaml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="components\messagebus.yaml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
