--- a/samples/javascript-azurefunction/docker-compose-single-kafka.yml
+++ b/samples/javascript-azurefunction/docker-compose-single-kafka.yml
@@ -1,3 +1,8 @@
+# ------------------------------------------------------------
+# Copyright (c) Microsoft Corporation.
+# Licensed under the MIT License.
+# ------------------------------------------------------------
+
 version: '2'
 services:
   zookeeper:
