Build Docker Container for the .NET Sample (#33)
* renaming the local param to make it more readable

* typo and add build step

* await task

* change to nuget reference for docker build

* copy the package file to the local nuget folder

* change the build with the new namespace

* add the local nuget into source control

* add the deployment step

* forgot to push the readme

* change the csproj

* add docker file

* Update .dockerignore

* Update dotnet-azurefunction.csproj

* Update DaprExtensionTests.csproj

--- a/samples/dotnet-azurefunction/dotnet-azurefunction.csproj
+++ b/samples/dotnet-azurefunction/dotnet-azurefunction.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.10" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.3" />
+    <!-- Switch to Nuget Reference by uncomment this line and remove the Project Reference line  -->
+    <!--<PackageReference Include="Dapr.AzureFunctions.Extension" Version="$(NupkgVersion)" />-->
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\DaprExtension\DaprExtension.csproj" />
