--- a/samples/javascript-azurefunction/extensions.csproj
+++ b/samples/javascript-azurefunction/extensions.csproj
@@ -8,6 +8,6 @@
     <PackageReference Include="Microsoft.Azure.WebJobs.Script.ExtensionsMetadataGenerator" Version="1.1.3" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\DaprExtension\DaprExtension.csproj" />
+    <ProjectReference Include="..\..\src\Dapr.AzureFunctions.Extension\Dapr.AzureFunctions.Extension.csproj" />
   </ItemGroup>
 </Project>
