Change deployment image name to the one stored in dapr docker hub

--- a/samples/dotnet-azurefunction/deploy/functionapp.yaml
+++ b/samples/dotnet-azurefunction/deploy/functionapp.yaml
@@ -32,7 +32,7 @@ spec:
     spec:
       containers:
       - name: functionapp
-        image: <your-docker-hub-id>/<your-image-name>
+        image: dapriosamples/dotnet-azurefunction
         ports:
         - containerPort: 3001
         imagePullPolicy: Always
