--- a/samples/quickstart/deploy.yaml
+++ b/samples/quickstart/deploy.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-function
+  name: azure-function
   namespace: default
 spec:
   selector:
-    app: my-function
+    app: azure-function
   ports:
   - protocol: TCP
     port: 80
@@ -15,19 +15,19 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-function
+  name: azure-function
   namespace: default
   labels:
-    app: my-function
+    app: azure-function
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: my-function
+      app: azure-function
   template:
     metadata:
       labels:
-        app: my-function
+        app: azure-function
       annotations:
         dapr.io/enabled: "true"
         dapr.io/id: "functionapp"
@@ -35,13 +35,10 @@ spec:
         dapr.io/port: "3001"
     spec:
       containers:
-      - name: my-function
-        image: myregistry/my-function
+      - name: azure-function
+        image: jeffhollan/dapr-function
         ports:
         # Port for HTTP triggered functions
         - containerPort: 80
-        envFrom:
-        - secretRef:
-            name: my-function
 ---
 
