Use MinVer for assembly and nuget versioning based on git tags

--- a/properties/dapr_managed.props
+++ b/properties/dapr_managed.props
@@ -46,7 +46,7 @@
     <Authors>Microsoft</Authors>
   </PropertyGroup>
 
-  <!-- Use MinVer for versioning based on git tags -->
+  <!-- Use MinVer for assembly, nuget versioning based on git tags -->
   <ItemGroup>
     <PackageReference Include="MinVer" Version="2.3.0">
       <PrivateAssets>all</PrivateAssets>
