--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,9 +65,9 @@ jobs:
           --prerelease true \
           ${RELEASE_ARTIFACT[*]}    
     - name: Publish nuget packages to nuget.org for tags
-      if: startswith(github.ref, 'refs/tags/v')
+      if: startswith(github.ref, 'refs/tags/v') && !(endsWith(github.ref, '-rc') || endsWith(github.ref, '-dev') || endsWith(github.ref, '-prerelease'))
       run: |
-        dotnet nuget push ${{ env.NUPKG_OUTDIR }}/DApr*.nupkg --skip-duplicate --api-key ${{ secrets.NUGETORG_DAPR_API_KEY }} --source https://api.nuget.org/v3/index.json
+        dotnet nuget push ${{ env.NUPKG_OUTDIR }}/Dapr*.nupkg --skip-duplicate --api-key ${{ secrets.NUGETORG_DAPR_API_KEY }} --source https://api.nuget.org/v3/index.json
     - name: Build samples docker images
       run: |
         echo building docker image for ${{ env.DOTNET_SAMPLE_APP_IMAGE_NAME }}
