--- a/samples/dotnet-azurefunction/local.settings.json
+++ b/samples/dotnet-azurefunction/local.settings.json
@@ -3,6 +3,7 @@
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
+    "PubSubName": "messagebus", // should be same as metatdata.name in components/messagebus.yaml
     "StateStoreName": "statestore", // should be same as metatdata.name in components/statestore.yaml
     "KafkaBindingName": "sample-topic" // should be same as metatdata.name in components/kafka_binding.yaml
   }
