--- a/samples/dotnet-azurefunction/.vscode/settings.json
+++ b/samples/dotnet-azurefunction/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "azureFunctions.deploySubpath": "bin/Release/netcoreapp3.0/publish",
+    "azureFunctions.deploySubpath": "bin/Release/net6.0/publish",
     "azureFunctions.projectLanguage": "C#",
     "azureFunctions.projectRuntime": "~3",
     "azureFunctions.preDeployTask": "publish"
