--- a/src/Microsoft.Azure.WebJobs.Extension.Dapr/Microsoft.Azure.WebJobs.Extension.Dapr.csproj
+++ b/src/Microsoft.Azure.WebJobs.Extension.Dapr/Microsoft.Azure.WebJobs.Extension.Dapr.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.2.2" />
     <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.36" />
+    <PackageReference Include="System.Text.Json" Version="7.0.2" />
   </ItemGroup>
 
   <!-- 3rd party dependencies -->
