--- a/src/Microsoft.Azure.WebJobs.Extension.Dapr/Microsoft.Azure.WebJobs.Extension.Dapr.csproj
+++ b/src/Microsoft.Azure.WebJobs.Extension.Dapr/Microsoft.Azure.WebJobs.Extension.Dapr.csproj
@@ -28,7 +28,8 @@
 
   <!-- 3rd party dependencies -->
   <ItemGroup>
-    <PackageReference Include="CloudNative.CloudEvents" Version="1.3.80" />
+    <PackageReference Include="CloudNative.CloudEvents" Version="2.6.0" />
+    <PackageReference Include="CloudNative.CloudEvents.SystemTextJson" Version="2.6.0" />
   </ItemGroup>
 
   <!-- Meta packages and development tools -->
