Added isolated worker sample project
Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

--- a/src/Microsoft.Azure.Functions.Worker.Extensions.Dapr/Microsoft.Azure.Functions.Worker.Extensions.Dapr.csproj
+++ b/src/Microsoft.Azure.Functions.Worker.Extensions.Dapr/Microsoft.Azure.Functions.Worker.Extensions.Dapr.csproj
@@ -46,4 +46,11 @@
     </ProjectReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="Microsoft.Azure.Functions.Worker.Extensions.Abstractions.ExtensionInformationAttribute">
+      <_Parameter1>Microsoft.Azure.WebJobs.Extensions.Dapr.*</_Parameter1>
+      <_Parameter2>$(SupportedVersion)</_Parameter2>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
