Sample for Dapr state input and output binding
Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

--- a/src/Microsoft.Azure.Functions.Worker.Extensions.Dapr/Microsoft.Azure.Functions.Worker.Extensions.Dapr.csproj
+++ b/src/Microsoft.Azure.Functions.Worker.Extensions.Dapr/Microsoft.Azure.Functions.Worker.Extensions.Dapr.csproj
@@ -10,7 +10,8 @@
     <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
-    <SupportedVersion>0.0.0-preview.0.80</SupportedVersion>
+    <!--<Version>99.99.99</Version>
+    <SupportedVersion>0.0.0-preview.0.81</SupportedVersion>-->
     <PackageTags>Microsoft Azure WebJobs AzureFunctions Isolated DotnetIsolated DAPR Worker</PackageTags>
   </PropertyGroup>
 
