--- a/samples/dotnet-isolated-azurefunction/dotnet-isolated-azurefunction.csproj
+++ b/samples/dotnet-isolated-azurefunction/dotnet-isolated-azurefunction.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.10.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.7.0" />
+   
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Microsoft.Azure.Functions.Worker.Extensions.Dapr\Microsoft.Azure.Functions.Worker.Extensions.Dapr.csproj" />
@@ -25,6 +26,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
+    <Folder Include="Properties\" />
   </ItemGroup>
 </Project>
