--- a/src/Microsoft.Azure.WebJobs.Extensions.Dapr/Microsoft.Azure.WebJobs.Extensions.Dapr.csproj
+++ b/src/Microsoft.Azure.WebJobs.Extensions.Dapr/Microsoft.Azure.WebJobs.Extensions.Dapr.csproj
@@ -46,4 +46,16 @@
     <AdditionalFiles Include="..\..\.stylecop\stylecop.json" />
     <Compile Include="..\..\.stylecop\GlobalSuppressions.cs" Link="GlobalSuppressions.cs" />
   </ItemGroup>
+
+  <Target Name="CopyNupkg" AfterTargets="Pack">
+    <ItemGroup>
+      <_Packages Include=".\bin\$(Configuration)\*.nupkg" />
+    </ItemGroup>
+    <Copy SourceFiles="@(_Packages)" DestinationFolder="../local-packages" />
+    <Message Text="Copied dapr .nupkg to local-packages" Importance="high" />
+  </Target>
+  <Target Name="RemoveNugetPackageCache" BeforeTargets="Build">
+    <RemoveDir Directories="$(NugetPackageRoot)/$(PackageId.ToLower())/99.99.99"></RemoveDir>
+    <Message Text="Deleted nuget cache for $(PackageId.ToLower())/99.99.99" Importance="high" />
+  </Target>
 </Project>
