--- a/samples/dotnet-isolated-azurefunction/dotnet-isolated-azurefunction.csproj
+++ b/samples/dotnet-isolated-azurefunction/dotnet-isolated-azurefunction.csproj
@@ -8,6 +8,8 @@
     <RootNamespace>dotnet_isolated_azurefunction</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.10.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.7.0" />
