--- a/samples/dotnet-isolated-azurefunction/dotnet-isolated-azurefunction.csproj
+++ b/samples/dotnet-isolated-azurefunction/dotnet-isolated-azurefunction.csproj
@@ -23,7 +23,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="local.settings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
