Update samples and test
Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

--- a/properties/tests.props
+++ b/properties/tests.props
@@ -1,5 +1,5 @@
 <Project>
-  <Import Project="$(MSBuildThisFileDirectory)..\properties\dapr_managed.props" />
+  <Import Project=".\common.props" />
 
   <PropertyGroup>
     <!-- Set Output Path for tests-->
