--- a/properties/webjobs.props
+++ b/properties/webjobs.props
@@ -1,5 +1,6 @@
 <Project>
   <Import Project=".\common.props" />
+  <Import Project=".\nuget.props" />
 
   <PropertyGroup>
     <PackageIconUrl>http://go.microsoft.com/fwlink/?LinkID=288890</PackageIconUrl>
